@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.1 2003/06/03 17:00:12 jschauma Exp $
+$NetBSD: distinfo,v 1.2 2003/09/07 09:17:30 jdolecek Exp $
 
-SHA1 (apache-ant-1.5.3-1-src.zip) = f7b36df66761a59e52e1cd52fd481abd351ff5c0
-Size (apache-ant-1.5.3-1-src.zip) = 6568503 bytes
+SHA1 (apache-ant-1.5.4-src.tar.bz2) = 56ffe823c7f0cef3e5bfab17e6a610eb5cef7208
+Size (apache-ant-1.5.4-src.tar.bz2) = 4537009 bytes
